# slideatlas

./: AppController.php  Notification.php  README
configs/: module.ini
controllers/: ConfigController.php  IndexController.php  UserController.php
controllers/components/: ApiComponent.php
controllers/forms/: ConfigForm.php
database/mysql/: 0.0.1.sql
database/pgsql/: 0.0.1.sql
database/upgrade/: 0.1.0.php  0.2.0.php
models/: AppDao.php  AppModel.php
models/base/: CommunityModelBase.php  ItemModelBase.php
models/dao/: CommunityDao.php  ItemDao.php
models/pdo/: CommunityModel.php  ItemModel.php
public/css/config/: config.index.css
public/css/element/: element.listimages.css
public/css/layout/: slideatlas.css
public/css/user/: user.fullscreen.css
public/js/config/: config.index.js  config.selectcommunity.js
public/js/user/: user.fullscreen.js  user.item.view.js
public/js/viewer/: OpenLayers.mobile.js  css-transform.js  fullscreen.js
tests/: CMakeLists.txt
tests/controllers/: CMakeLists.txt
tests/models/: CMakeLists.txt
views/config/: index.phtml  selectcommunity.phtml
views/element/: listimages.phtml
views/index/: index.phtml
views/scripts/element/: itemview.phtml
views/user/: chunk.phtml  fullscreen.phtml  index.phtml  list.phtml
